force-app/main/default/objects/Tax_Rate__mdt/Tax_Rate__mdt.object-meta.xml
<CustomObject>
    <label>Tax Rate</label>
    <pluralLabel>Tax Rates</pluralLabel>
</CustomObject>