force-app/main/default/objects/Tax_Rate__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <default>true</default>
                <label>CA</label>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>